--- a/gulp-builder-dz1/package.json
+++ b/gulp-builder-dz1/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "browser-sync": "2.11.2",
-    "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "2.6.0",
@@ -20,7 +20,7 @@
     "gulp-pug": "^3.0.3",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "2.2.0",
-    "gulp-sourcemaps": "1.6.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-sprite-generator": "^0.2.3",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svgmin": "^1.2.2",
@@ -28,6 +28,23 @@
     "rimraf": "2.5.2"
   },
   "dependencies": {
-    "normalize.css": "^4.1.1"
+    "browser-sync": "^2.16.0",
+    "generator-gulp-foundation": "0.0.3",
+    "generator-mocha": "^0.3.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-pug": "^3.0.4",
+    "gulp-replace": "^0.5.4",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-svgmin": "^1.2.3",
+    "gulp.spritesmith": "^6.2.1",
+    "jquery": "^3.1.1",
+    "normalize.css": "^4.1.1",
+    "rimraf": "^2.5.4",
+    "yo": "^1.8.5"
   }
 }
